# DigitalSuper8Lab

./: CMakeLists.txt  README.md  appicon.rc  collapsiblepanel.cpp  collapsiblepanel.h  developdialog.cpp  developdialog.h  developdialog.ui  developthread - Copy (2).cpp  developthread - Copy.cpp  developthread - Copy.h  developthread.cpp  developthread.h  dngbatchconverter_tiny.cpp  dngbatchconverter_tiny.h  dngbatchdialog.cpp  dngbatchdialog.h  dngbatchdialog.ui  ds8audioprocessor.cpp  ds8audioprocessor.h  ds8videomuxer.cpp  ds8videomuxer.h  icons.qrc  kodak_dark.qss  kodak_yellow.qss  main.cpp  processing - Copy (2).ui  processing - Copy (3).ui  processing - Copy (4).ui  processing - Copy (5).ui  processing - Copy (6).ui  processing - Copy.ui  processing.cpp  processing.h  processing.ui  processing_bac.ui  scurvepreviewlut.cpp  scurvepreviewlut.h  settingsdialog.cpp  settingsdialog.h  (+4 more)
